--- a/sass/base/_social-icons.scss
+++ b/sass/base/_social-icons.scss
@@ -16,9 +16,9 @@
 .social-icons-item{
     display: inline-block;
     text-decoration: none;
-}
-.social-icons-item:not(:last-child){
-    margin-right: 10px;
+    &:not(:last-child){
+      margin-right: 10px;
+    }
 }
 .social-icons-svg{
     width: 20px;
@@ -39,20 +39,23 @@
     border-radius: 50%;
     background-color: rgba(255, 255, 255, 0.1);
 }
-.social-icons-link:hover{
-    background-color: var(--accent-cl);
+.social-icons-link{
+    &:hover{
+      background-color: var(--accent-cl);
+    }
+    &:hover .social-icons-svg,
+    &:focus .social-icons-svg{
+      fill: var(--whait-cl);
+      transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
 }
-
-.social-icons-link:hover .social-icons-svg,
-.social-icons-link:focus .social-icons-svg{
-    fill: var(--whait-cl);
-    transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.social-icons-link-footer:hover .social-icons-svg,
-.social-icons-link-footer:focus .social-icons-svg{
-    fill: var(--whait-cl);
-    transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.social-icons-link-footer:hover{
-    background-color: var(--accent-cl);
+.social-icons-link-footer{
+    &:hover .social-icons-svg,
+    &:focus .social-icons-svg{
+      fill: var(--whait-cl);
+      transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    &:hover{
+      background-color: var(--accent-cl);
+    }
 }
