--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -6,15 +6,14 @@
     height: 100%;
     width: 100%;
     fill: var(--black-cl);
+    &:hover{
+      fill: var(--accent-cl);
+    }
 }
-.icon-x:hover{
-    fill: var(--accent-cl);
-}
-
 .recole-form{
     display: block;
     height: 478px;
-
+    width: inherit;
 }
 .svg-form1{
     position: absolute;
@@ -40,9 +39,6 @@
     fill: var(--accent-cl);
 }
 
-.recole-form{
-    width: inherit;
-}
 .recole-form-feald{
     margin-bottom: 0;
     border: 1px solid rgba(33, 33, 33, 0.2);;
@@ -78,7 +74,6 @@ input.recole-form-feald:focus + svg.svg-form2,
 input.recole-form-feald:focus + svg.svg-form3{
     fill: var(--accent-cl);
 }
-
 .label-text{
     display: block;
     padding: 0;
@@ -90,44 +85,36 @@ input.recole-form-feald:focus + svg.svg-form3{
     letter-spacing: 0.01em;
     color: #757575;
 }
-
 textarea.recole-form-feald{
     height: 120px;
 }
-   
-
 .checkbox{
     display: none;
     position: absolute;
     z-index: -1;
     opacity: 0;
-}
-
-.checkbox+label {
-    display: inline-flex;
-    align-items: center;
-}
-
-.checkbox+label::before {
-    content: '';
-    display: inline-block;
-    width: 16px;
-    height: 15px;
-    border: 2px solid black;
-    border-radius: 2px;
-}
-
-.checkbox:checked+label::before {
-    border-color: #0b76ef;
-    background-color: #0b76ef;
-    background-image: url(../icons/confirm.svg);
+    &+label {
+      display: inline-flex;
+      align-items: center;
+    }
+    &+label::before {
+      content: '';
+      display: inline-block;
+      width: 16px;
+      height: 15px;
+      border: 2px solid black;
+      border-radius: 2px;
+    }
+    &:checked+label::before {
+      border-color: #0b76ef;
+      background-color: #0b76ef;
+      background-image: url(../icons/confirm.svg);
     cursor: pointer;
+    }
+    &:not(:disabled):not(:checked)+label:hover::before {
+      border-color: #0b76ef;
+    }
 }
-
-.checkbox:not(:disabled):not(:checked)+label:hover::before {
-    border-color: #0b76ef;
-}
-
 .fake-checkbox {
     display: flex;
     margin-left: 13px;
@@ -153,23 +140,26 @@ label.fake{
     letter-spacing: 0.03em;
     color: var(--accent-cl);
 }
-.recole-form label{
-    margin-top: 12px;
-    margin-bottom: 4px;
+.recole-form {
+    &label{
+      margin-top: 12px;
+      margin-bottom: 4px;
+    }
+    & label:not(:first-child){
+        margin-top: 10px;
+    }
+    & input{
+        padding-left: 35px;
+        padding-right: 35px;
+    }
+    & input:not(:last-child){
+        margin-bottom: 0px;
+    }
+    & span{
+        margin-left: 9px;
+    }
 }
-.recole-form label:not(:first-child){
-    margin-top: 10px;
-}
-.recole-form input{
-    padding-left: 35px;
-    padding-right: 35px;
-}
-.recole-form input:not(:last-child){
-    margin-bottom: 0px;
-}
-.recole-form span{
-    margin-left: 9px;
-}
+
 .btn-send-recol{
     height: 50px;
     width: 200px;
@@ -188,12 +178,11 @@ label.fake{
     align-items: center;
     letter-spacing: 0.06em;
     overflow: hidden;
+    &:hover,
+    &:focus{
+      cursor: pointer;
+    }
 }
-.btn-send-recol:hover,
-.btn-send-recol:focus{
-    cursor: pointer;
-}
-
 .button-clouse{
     content: "";
     position: absolute;
