--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -8,11 +8,11 @@
     z-index: 100;
     opacity: 1;
     transition: opacity 0.5s ease-in;
-}
-.backdrop.is-hidden{
-    opacity: 0;
-    visibility: hidden;
-    pointer-events: none;
+    &.is-hidden{
+        opacity: 0;
+        visibility: hidden;
+        pointer-events: none;
+    }
 }
 .is-hidden.modal{
     transform: translate(-50%,-50%) scale(0.5);
