--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -41,32 +41,31 @@ figure{
     position: relative;
     height: 100%;
     margin: 0;
-}
-figure p{
-    position: absolute;
-    top: 0;
-    left: 50%;
-    width: 100%;
-    height: 70px;
-    margin-top: 224px;
-    margin-bottom: 0;
-    transform: translate(-50%, 0);
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 14px;
-    line-height: 1.15;
-    text-align: center;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: var(--whait-cl);
-    z-index: 2;
-    opacity: 1;
-    text-align: center;
-    padding-top: 27px;
-    background-color: rgba(47, 48, 58, 0.8);
-}
-
+    & p{
+        position: absolute;
+        top: 0;
+        left: 50%;
+        width: 100%;
+        height: 70px;
+        margin-top: 224px;
+        margin-bottom: 0;
+        transform: translate(-50%, 0);
+        font-family: Roboto;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 14px;
+        line-height: 1.15;
+        text-align: center;
+        letter-spacing: 0.03em;
+        text-transform: uppercase;
+        color: var(--whait-cl);
+        z-index: 2;
+        opacity: 1;
+        text-align: center;
+        padding-top: 27px;
+        background-color: rgba(47, 48, 58, 0.8);
+    }
+}    
 
 .hidden{ 
     display: none;
@@ -80,6 +79,10 @@ figure p{
     font-size:14px;
     line-height: 1.14;
     letter-spacing: 3%;
+    margin: 0;
+    padding: 0;
+    margin-bottom: 20px;
+    margin-top: 0;
 }
 .inline-information li{
     list-style: none;
@@ -89,23 +92,8 @@ figure p{
     margin-left: 215px;
     margin-left: 93px;
 }
-.subscribe{
-    margin: 0;
-    padding: 0;
-    margin-bottom: 20px;
-    margin-top: 0;
-    text-transform: uppercase;
-    color: var(--whait-cl);
-    font-family: inherit;
-    font-weight:700;
-    font-style: normal;
-    font-size:14px;
-    line-height: 1.14;
-    letter-spacing: 3%
-}
 .subscribe-form{
     display: flex;
-    
 }
 .form-feald{
     border: 1px solid rgba(255, 255, 255, 0.3);
