--- a/sass/layouts/_main-portfolio.scss
+++ b/sass/layouts/_main-portfolio.scss
@@ -17,9 +17,9 @@
     margin-bottom: 0px;
     width: 370px;
     height: 294px;
-}
-.list-item-position:not(:last-child){
-    margin-right: 30px;
+    &:not(:last-child){
+        margin-right: 30px;
+    }
 }
 .main-text {
     font-size: 14px;
