change var on $

--- a/sass/base/_menu.scss
+++ b/sass/base/_menu.scss
@@ -15,7 +15,7 @@
     font-size: 26px;
     line-height: 1.192;
     letter-spacing: 0.03em;
-    color: var(--accent-cl);
+    color: $accent-cl;
     text-decoration: none;
 }
 .logo2 {
@@ -25,7 +25,7 @@
     font-size: 26px;
     line-height: 1.192;
     letter-spacing: 0.03em;
-    color: var(--black-cl);
+    color: $black-cl;
     text-decoration: none;
 }
 .logo3 {
@@ -35,7 +35,7 @@
     font-size: 26px;
     line-height: 1.192;
     letter-spacing: 0.03em;
-    color: var(--whait-cl);
+    color: $whait-cl;
     text-decoration: none;
 }
 
