--- a/sass/base/_buttons.scss
+++ b/sass/base/_buttons.scss
@@ -3,8 +3,8 @@
     font-size: 16px;
     line-height: 1.87;
     letter-spacing: 0.06em;
-    color: var(--whait-cl);
-    background-color:var(--accent-cl);
+    color: $whait-cl;
+    background-color:$accent-cl;
     border-radius: 4px;
     display: block;
     margin:0 auto;
