--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -11,7 +11,7 @@ body {
     font-family: "Roboto", sans-serif;
     font-size: 14px;
     line-height: 1.71;
-    color: var(--black-cl);
+    color: $black-cl;
 }
 :hover {
     transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
