--- a/sass/base/_social-icons.scss
+++ b/sass/base/_social-icons.scss
@@ -10,7 +10,7 @@
     align-items: center;
     width: 44px;
     height: 44px;
-    background-color: var(--whait-cl);
+    background-color: $whait-cl;
     border-radius: 50%;
 }
 .social-icons-item{
@@ -28,7 +28,7 @@
 .social-icons-svg-footer{
     width: 20px;
     height: 20px;
-    fill:var(--whait-cl);
+    fill:$whait-cl;
 }
 .social-icons-link-footer{
     display: flex;
@@ -41,21 +41,21 @@
 }
 .social-icons-link{
     &:hover{
-      background-color: var(--accent-cl);
+      background-color: $accent-cl;
     }
     &:hover .social-icons-svg,
     &:focus .social-icons-svg{
-      fill: var(--whait-cl);
+      fill: $whait-cl;
       transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 }
 .social-icons-link-footer{
     &:hover .social-icons-svg,
     &:focus .social-icons-svg{
-      fill: var(--whait-cl);
+      fill: $whait-cl;
       transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
     &:hover{
-      background-color: var(--accent-cl);
+      background-color: $accent-cl;
     }
 }
