--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -2,7 +2,7 @@
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
-    color: var(--whait-cl);
+    color: $whait-cl;
     text-decoration: none;
     font-style: normal;
 }
@@ -17,7 +17,7 @@
 }
 .join{
     text-transform: uppercase;
-    color: var(--whait-cl);
+    color: $whait-cl;
     font-family: inherit;
     font-weight:700;
     font-style: normal;
@@ -58,7 +58,7 @@ figure{
         text-align: center;
         letter-spacing: 0.03em;
         text-transform: uppercase;
-        color: var(--whait-cl);
+        color: $whait-cl;
         z-index: 2;
         opacity: 1;
         text-align: center;
@@ -72,7 +72,7 @@ figure{
 } 
 .subscribe{
     text-transform: uppercase;
-    color: var(--whait-cl);
+    color: $whait-cl;
     font-family: inherit;
     font-weight:700;
     font-style: normal;
@@ -101,7 +101,7 @@ figure{
     background: transparent;
     width: 358px;
     height: 50px;
-    color: var(--whait-cl);
+    color: $whait-cl;
     font-family: inherit;
     font-weight:normal;
     font-style: normal;
@@ -118,13 +118,13 @@ figure{
     display: flex;
     margin: 0;padding: 0;
     border-radius: 4px;
-    border: 1 solid var(--accent-cl);
-    background: var(--accent-cl);
+    border: 1 solid $accent-cl;
+    background: $accent-cl;
     width: 200px;
     height: 50px;
     margin-right: 0px;
     margin-left: 12px;
-    color: var(--whait-cl);
+    color: $whait-cl;
     font-family: inherit;
     font-weight:bold;
     font-style: normal;
@@ -139,7 +139,7 @@ figure{
     padding-bottom: 10px;
     padding-right: 18px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    fill: var(--whait-cl);
+    fill: $whait-cl;
     cursor: pointer;
 }
 .bsubscribe-btn:disabled{
