--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -4,7 +4,7 @@
     line-height: 1.36;
     letter-spacing: 0.06em;
     text-align: center;
-    color: var(--whait-cl);
+    color: $whait-cl;
     width: 696px;
     height: 120px;
     margin-bottom: 30px;
