--- a/sass/layouts/_main-portfolio.scss
+++ b/sass/layouts/_main-portfolio.scss
@@ -3,7 +3,7 @@
     font-size: 36px;
     line-height: 1.167;
     letter-spacing: 0.03em;
-    color: var(--black-cl);
+    color: $black-cl;
     text-align: center;
     margin-top: 0;
     margin-bottom: 50px;
@@ -25,7 +25,7 @@
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
-    color: var(--main-text-cl);
+    color: $main-text-cl;
     width: 270px;
     margin-left: 0;
     padding-left: 0;   
