--- a/sass/layouts/_portfolio-catalog.scss
+++ b/sass/layouts/_portfolio-catalog.scss
@@ -8,7 +8,7 @@
     align-items: center;
     text-align: center;
     letter-spacing: 0.06em;
-    color: var(--black-cl);
+    color: $black-cl;
     background-color: #F5F4FA;
     border-radius: 4px;
     margin: 0;
@@ -70,7 +70,7 @@
     left: 0;
     width: 100%;
     height: 294px;
-    color: var(--whait-cl);
+    color: $whait-cl;
     background-color: rgba(33, 150, 243, 0.9);
     opacity: 0;
     top: 100%;
