--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,8 +1,7 @@
-:root {
-    --main-text-cl: #757575;
-    --accent-cl: #2196F3;
-    --black-cl: #212121;
-    --whait-cl: #FFFFFF;
-    --dark-bg: #2F303A;
-    --bg-items: #F5F4FA;
-}
+
+    $main-text-cl: #757575;
+    $accent-cl: #2196F3;
+    $black-cl: #212121;
+    $whait-cl: #FFFFFF;
+    $dark-bg: #2F303A;
+    $bg-items: #F5F4FA;
