--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -8,6 +8,7 @@
     fill: $black-cl;
     &:hover{
       fill: $accent-cl;
+      cursor: pointer;
     }
 }
 .recole-form{
@@ -17,19 +18,19 @@
 }
 .svg-form1{
     position: absolute;
-    top: 102px;
+    top: 107px;
     left: 56px;
     fill: $black-cl;
 }
 .svg-form2{
     position: absolute;
-    top: 166px;
+    top: 175px;
     left: 56px;
     fill: $black-cl;
 }
 .svg-form3{
     position: absolute;
-    top: 230px;
+    top: 242px;
     left: 56px;
     fill: $black-cl;
 }
@@ -40,6 +41,7 @@
 }
 
 .recole-form-feald{
+    margin-top: 4px;
     margin-bottom: 0;
     border: 1px solid rgba(33, 33, 33, 0.2);;
     background: transparent;
@@ -58,15 +60,34 @@
     padding-left: 16px;
     border: 1px solid rgba(33, 33, 33, 0.2)
 }
+.recole-form-feald:focus,
+.recole-form-feald:hover{
+    border: 1px solid #2196F3;
+    border-radius: 4px;
+    box-shadow: none;
+    outline: none;
+    cursor: pointer;
+}
+textarea.checkbox:hover input,
+textarea.checkbox:focus input{
+    border: 1px solid #2196F3;
+    border-radius: 4px;
+    box-shadow: none;
+    outline: none;
+    cursor: pointer;
+}
 
 form.recole-form input.recole-form-feald{
     position: relative;
 }
+.recole-form input.recole-form-feald:focus,
 .recole-form input.recole-form-feald:hover{
     cursor: pointer;
     border: 1px solid #2196F3;
     box-sizing: border-box;
     border-radius: 4px;
+    box-shadow: none;
+    outline: none;
 }
 
 input.recole-form-feald:focus + svg.svg-form1,
@@ -193,4 +214,7 @@ label.fake{
     border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 100%;
     background: inherit;
+}
+.button-clouse:focus{
+    cursor: pointer;
 }
