--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,3 @@
-:root {
-  --main-text-cl: #757575;
-  --accent-cl: #2196F3;
-  --black-cl: #212121;
-  --whait-cl: #FFFFFF;
-  --dark-bg: #2F303A;
-  --bg-items: #F5F4FA;
-}
-
 html {
   box-sizing: border-box;
 }
@@ -21,7 +12,7 @@ body {
   font-family: "Roboto", sans-serif;
   font-size: 14px;
   line-height: 1.71;
-  color: var(--black-cl);
+  color: #212121;
 }
 
 :hover {
@@ -58,7 +49,7 @@ body {
   font-size: 26px;
   line-height: 1.192;
   letter-spacing: 0.03em;
-  color: var(--accent-cl);
+  color: #2196F3;
   text-decoration: none;
 }
 
@@ -69,7 +60,7 @@ body {
   font-size: 26px;
   line-height: 1.192;
   letter-spacing: 0.03em;
-  color: var(--black-cl);
+  color: #212121;
   text-decoration: none;
 }
 
@@ -80,7 +71,7 @@ body {
   font-size: 26px;
   line-height: 1.192;
   letter-spacing: 0.03em;
-  color: var(--whait-cl);
+  color: #FFFFFF;
   text-decoration: none;
 }
 
@@ -89,8 +80,8 @@ body {
   font-size: 16px;
   line-height: 1.87;
   letter-spacing: 0.06em;
-  color: var(--whait-cl);
-  background-color: var(--accent-cl);
+  color: #FFFFFF;
+  background-color: #2196F3;
   border-radius: 4px;
   display: block;
   margin: 0 auto;
@@ -101,74 +92,6 @@ body {
   padding-left: 32px;
   border: none;
   cursor: pointer;
-}
-
-.social-icons {
-  display: flex;
-  justify-content: center;
-  padding-left: 0;
-  margin-bottom: 30px;
-}
-
-.social-icons-link {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 44px;
-  height: 44px;
-  background-color: var(--whait-cl);
-  border-radius: 50%;
-}
-
-.social-icons-item {
-  display: inline-block;
-  text-decoration: none;
-}
-
-.social-icons-item:not(:last-child) {
-  margin-right: 10px;
-}
-
-.social-icons-svg {
-  width: 20px;
-  height: 20px;
-  fill: #afb1b8;
-}
-
-.social-icons-svg-footer {
-  width: 20px;
-  height: 20px;
-  fill: var(--whait-cl);
-}
-
-.social-icons-link-footer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 44px;
-  height: 44px;
-  border-radius: 50%;
-  background-color: rgba(255, 255, 255, 0.1);
-}
-
-.social-icons-link:hover {
-  background-color: var(--accent-cl);
-}
-
-.social-icons-link:hover .social-icons-svg,
-.social-icons-link:focus .social-icons-svg {
-  fill: var(--whait-cl);
-  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.social-icons-link-footer:hover .social-icons-svg,
-.social-icons-link-footer:focus .social-icons-svg {
-  fill: var(--whait-cl);
-  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.social-icons-link-footer:hover {
-  background-color: var(--accent-cl);
 }
 
 .backdrop {
@@ -221,91 +144,44 @@ body {
   letter-spacing: 0.03em;
 }
 
+.button-clouse {
+  content: "";
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  width: 30px;
+  height: 30px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 100%;
+  background: inherit;
+  cursor: pointer;
+}
+
+.button-clouse:focus {
+  fill: #2196F3;
+  cursor: pointer;
+}
+
 .icon-x {
+  cursor: pointer;
   display: flex;
   margin-top: 4px;
   margin-left: 4px;
   padding: 0;
   height: 100%;
   width: 100%;
-  fill: var(--black-cl);
+  fill: #212121;
 }
 
-.icon-x:hover {
-  fill: var(--accent-cl);
+.icon-x:focus, .icon-x:hover {
+  fill: #2196F3;
+  cursor: pointer;
 }
 
 .recole-form {
   display: block;
   height: 478px;
-}
-
-.svg-form1 {
-  position: absolute;
-  top: 102px;
-  left: 56px;
-  fill: var(--black-cl);
-}
-
-.svg-form2 {
-  position: absolute;
-  top: 166px;
-  left: 56px;
-  fill: var(--black-cl);
-}
-
-.svg-form3 {
-  position: absolute;
-  top: 230px;
-  left: 56px;
-  fill: var(--black-cl);
-}
-
-.svg-form1:hover,
-.svg-form2:hover,
-.svg-form3:hover {
-  fill: var(--accent-cl);
-}
-
-.recole-form {
   width: inherit;
-}
-
-.recole-form-feald {
-  margin-bottom: 0;
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  background: transparent;
-  width: 448px;
-  height: 40px;
-  color: var(--black-cl);
-  font-style: normal;
-  font-size: 16px;
-  line-height: 1.25;
-  letter-spacing: 3%;
-  resize: none;
-  border-radius: 4px;
-  padding-top: 12px;
-  padding-right: 16px;
-  padding-bottom: 12px;
-  padding-left: 16px;
-  border: 1px solid rgba(33, 33, 33, 0.2);
-}
-
-form.recole-form input.recole-form-feald {
-  position: relative;
-}
-
-.recole-form input.recole-form-feald:hover {
-  cursor: pointer;
-  border: 1px solid #2196F3;
-  box-sizing: border-box;
-  border-radius: 4px;
-}
-
-input.recole-form-feald:focus + svg.svg-form1,
-input.recole-form-feald:focus + svg.svg-form2,
-input.recole-form-feald:focus + svg.svg-form3 {
-  fill: var(--accent-cl);
 }
 
 .label-text {
@@ -320,8 +196,88 @@ input.recole-form-feald:focus + svg.svg-form3 {
   color: #757575;
 }
 
-textarea.recole-form-feald {
-  height: 120px;
+.recole-form-feald {
+  margin-top: 4px;
+  margin-bottom: 0;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  background: transparent;
+  width: 448px;
+  height: 40px;
+  color: #212121;
+  font-style: normal;
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 3%;
+  resize: none;
+  border-radius: 4px;
+  padding-top: 12px;
+  padding-right: 16px;
+  padding-bottom: 12px;
+  padding-left: 16px;
+}
+
+.recole-form-feald:focus, .recole-form-feald:hover {
+  border: 1px solid #2196F3;
+  border-radius: 4px;
+  box-shadow: none;
+  outline: none;
+  cursor: pointer;
+}
+
+.svg-form1 {
+  position: absolute;
+  top: 107px;
+  left: 56px;
+  fill: #212121;
+}
+
+.svg-form2 {
+  position: absolute;
+  top: 175px;
+  left: 56px;
+  fill: #212121;
+}
+
+.svg-form3 {
+  position: absolute;
+  top: 242px;
+  left: 56px;
+  fill: #212121;
+}
+
+.svg-form1:hover,
+.svg-form2:hover,
+.svg-form3:hover {
+  fill: #2196F3;
+}
+
+textarea.recole-form-feald:hover,
+textarea.recole-form-feald:focus {
+  border: 1px solid #2196F3;
+  border-radius: 4px;
+  box-shadow: none;
+  outline: none;
+  cursor: pointer;
+}
+
+form.recole-form input.recole-form-feald {
+  position: relative;
+}
+
+.recole-form input.recole-form-feald:focus,
+.recole-form input.recole-form-feald:hover {
+  cursor: pointer;
+  border: 1px solid #2196F3;
+  box-sizing: border-box;
+  border-radius: 4px;
+  box-shadow: none;
+  outline: none;
+}
+
+input.recole-form-feald:focus + svg.svg-form1,
+input.recole-form-feald:focus + svg.svg-form2,
+input.recole-form-feald:focus + svg.svg-form3 {
+  fill: #2196F3;
 }
 
 .checkbox {
@@ -383,10 +339,10 @@ label.fake {
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
-  color: var(--accent-cl);
+  color: #2196F3;
 }
 
-.recole-form label {
+.recole-formlabel {
   margin-top: 12px;
   margin-bottom: 4px;
 }
@@ -417,9 +373,9 @@ label.fake {
   margin-left: 124px;
   background: #188CE8;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border: 1 solid var(--accent-cl);
+  border: 1 solid #2196F3;
   border-radius: 4px;
-  color: var(--whait-cl);
+  color: #FFFFFF;
   font-weight: bold;
   font-size: 16px;
   line-height: 1.87;
@@ -428,21 +384,8 @@ label.fake {
   overflow: hidden;
 }
 
-.btn-send-recol:hover,
-.btn-send-recol:focus {
+.btn-send-recol:hover, .btn-send-recol:focus {
   cursor: pointer;
-}
-
-.button-clouse {
-  content: "";
-  position: absolute;
-  top: 8px;
-  right: 8px;
-  width: 30px;
-  height: 30px;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  border-radius: 100%;
-  background: inherit;
 }
 
 .header-box {
@@ -450,7 +393,7 @@ label.fake {
   top: 0;
   left: 0;
   right: 0;
-  background-color: var(--whait-cl);
+  background-color: #FFFFFF;
   z-index: 3;
   border: 1px solid #ECECEC;
 }
@@ -477,13 +420,8 @@ label.fake {
   letter-spacing: 0.02em;
 }
 
-.link-item:focus,
-.link-item:hover {
-  color: var(--accent-cl);
-}
-
-nav.flex a.active {
-  position: relative;
+.link-item:focus, .link-item:hover {
+  color: #2196F3;
 }
 
 .link-item:hover.link-item::after {
@@ -491,8 +429,16 @@ nav.flex a.active {
   display: block;
   width: 100%;
   height: 4px;
-  background-color: var(--accent-cl);
+  background-color: #2196F3;
   margin-top: 22px;
+}
+
+.link-item:not(:last-child) {
+  margin-right: 50px;
+}
+
+nav.flex a.active {
+  position: relative;
 }
 
 .active.link-item::after {
@@ -500,12 +446,8 @@ nav.flex a.active {
   display: block;
   width: 100%;
   height: 4px;
-  background-color: var(--accent-cl);
+  background-color: #2196F3;
   margin-top: 22px;
-}
-
-.link-item:not(:last-child) {
-  margin-right: 50px;
 }
 
 .left-list {
@@ -524,7 +466,7 @@ nav.flex a.active {
   margin-right: 0;
   padding-inline-start: 0;
   margin-bottom: 0;
-  color: var(--main-text-cl);
+  color: #757575;
 }
 
 .link-item-right {
@@ -554,20 +496,20 @@ nav.flex a.active {
 .link-item-right:hover,
 svg.icon-header-item1:hover,
 svg.icon-header-item2:hover {
-  color: var(--accent-cl);
-  fill: var(--accent-cl);
+  color: #2196F3;
+  fill: #2196F3;
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .link-item-right:hover svg.icon-header-item1,
 .link-item-right:hover svg.icon-header-item2 {
-  fill: var(--accent-cl);
+  fill: #2196F3;
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .link:hover
 .link:focus {
-  fill: var(--accent-cl);
+  fill: #2196F3;
 }
 
 .icon-header {
@@ -582,7 +524,7 @@ svg.icon-header-item2:hover {
   height: 12px;
   margin-left: 0;
   margin-right: 10px;
-  fill: var(--main-text-cl);
+  fill: #757575;
   align-items: center;
 }
 
@@ -593,16 +535,16 @@ svg.icon-header-item2:hover {
   height: 16px;
   margin-left: 0;
   margin-right: 10px;
-  fill: var(--main-text-cl);
+  fill: #757575;
   align-items: center;
 }
 
 link:hover .icon-header-item2 {
-  fill: var(--accent-cl);
+  fill: #2196F3;
 }
 
 .main {
-  background-color: var(--whait-cl);
+  background-color: #FFFFFF;
   border: 1px solid #ECECEC;
 }
 
@@ -618,7 +560,7 @@ link:hover .icon-header-item2 {
 }
 
 .item-backgraund {
-  background-color: var(--bg-items);
+  background-color: #F5F4FA;
   width: 270px;
   height: 120px;
   padding-top: 25px;
@@ -629,12 +571,12 @@ link:hover .icon-header-item2 {
 .features {
   width: 65px;
   height: 70px;
-  background-color: var(--bg-items);
+  background-color: #F5F4FA;
   display: inline-block;
 }
 
 .features:hover {
-  fill: var(--accent-cl);
+  fill: #2196F3;
 }
 
 .portfolio-list {
@@ -662,7 +604,7 @@ link:hover .icon-header-item2 {
   align-items: center;
   text-align: center;
   letter-spacing: 0.06em;
-  color: var(--black-cl);
+  color: #212121;
   background-color: #F5F4FA;
   border-radius: 4px;
   margin: 0;
@@ -724,7 +666,7 @@ link:hover .icon-header-item2 {
   overflow: hidden;
 }
 
-.portfolio-container-item img {
+.portfolio-container-item li img {
   max-width: 100%;
   display: block;
 }
@@ -734,7 +676,7 @@ link:hover .icon-header-item2 {
   left: 0;
   width: 100%;
   height: 294px;
-  color: var(--whait-cl);
+  color: #FFFFFF;
   background-color: rgba(33, 150, 243, 0.9);
   opacity: 0;
   top: 100%;
@@ -762,7 +704,7 @@ link:hover .icon-header-item2 {
   line-height: 1.36;
   letter-spacing: 0.06em;
   text-align: center;
-  color: var(--whait-cl);
+  color: #FFFFFF;
   width: 696px;
   height: 120px;
   margin-bottom: 30px;
@@ -777,7 +719,7 @@ link:hover .icon-header-item2 {
   font-size: 36px;
   line-height: 1.167;
   letter-spacing: 0.03em;
-  color: var(--black-cl);
+  color: #212121;
   text-align: center;
   margin-top: 0;
   margin-bottom: 50px;
@@ -803,7 +745,7 @@ link:hover .icon-header-item2 {
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
-  color: var(--main-text-cl);
+  color: #757575;
   width: 270px;
   margin-left: 0;
   padding-left: 0;
@@ -821,7 +763,7 @@ link:hover .icon-header-item2 {
   font-size: 36px;
   line-height: 1.167;
   letter-spacing: 0.03em;
-  color: var(--black-cl);
+  color: #212121;
   text-align: center;
   margin-top: 0;
   margin-bottom: 50px;
@@ -847,7 +789,7 @@ link:hover .icon-header-item2 {
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
-  color: var(--main-text-cl);
+  color: #757575;
   width: 270px;
   margin-left: 0;
   padding-left: 0;
@@ -865,7 +807,7 @@ link:hover .icon-header-item2 {
   font-size: 16px;
   line-height: 1.187;
   letter-spacing: 0.03em;
-  color: var(--main-text-cl);
+  color: #757575;
   margin-top: 10px;
   margin-bottom: 16px;
   text-align: center;
@@ -877,7 +819,7 @@ link:hover .icon-header-item2 {
   font-size: 16px;
   line-height: 1.187;
   letter-spacing: 0.03em;
-  color: var(--black-cl);
+  color: #212121;
 }
 
 .team-box {
@@ -915,7 +857,7 @@ link:hover .icon-header-item2 {
 }
 
 .list-contacts-img {
-  background-color: var(--whait-cl);
+  background-color: #FFFFFF;
   margin-top: 0;
   margin-right: 0;
   width: 270px;
@@ -938,6 +880,74 @@ link:hover .icon-header-item2 {
   width: 270px;
 }
 
+.social-icons {
+  display: flex;
+  justify-content: center;
+  padding-left: 0;
+  margin-bottom: 30px;
+}
+
+.social-icons-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 44px;
+  height: 44px;
+  background-color: #FFFFFF;
+  border-radius: 50%;
+}
+
+.social-icons-item {
+  display: inline-block;
+  text-decoration: none;
+}
+
+.social-icons-item:not(:last-child) {
+  margin-right: 10px;
+}
+
+.social-icons-svg {
+  width: 20px;
+  height: 20px;
+  fill: #afb1b8;
+}
+
+.social-icons-svg-footer {
+  width: 20px;
+  height: 20px;
+  fill: #FFFFFF;
+}
+
+.social-icons-link-footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
+.social-icons-link:hover {
+  background-color: #2196F3;
+}
+
+.social-icons-link:hover .social-icons-svg,
+.social-icons-link:focus .social-icons-svg {
+  fill: #FFFFFF;
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.social-icons-link-footer:hover .social-icons-svg,
+.social-icons-link-footer:focus .social-icons-svg {
+  fill: #FFFFFF;
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.social-icons-link-footer:hover {
+  background-color: #2196F3;
+}
+
 .project-name {
   font-weight: bold;
   font-size: 18px;
@@ -956,7 +966,7 @@ link:hover .icon-header-item2 {
   font-size: 16px;
   line-height: 1.87;
   letter-spacing: 0.03em;
-  color: var(--main-text-cl);
+  color: #757575;
   padding-left: 24px;
   padding-right: 24px;
   margin-top: 4px;
@@ -967,9 +977,9 @@ link:hover .icon-header-item2 {
 
 .btn-portfolio:hover,
 .btn-portfolio:focus {
-  background-color: var(--accent-cl);
-  color: var(--whait-cl);
-  border-color: var(--accent-cl);
+  background-color: #2196F3;
+  color: #FFFFFF;
+  border-color: #2196F3;
 }
 
 .logo-position {
@@ -1027,17 +1037,21 @@ link:hover .icon-header-item2 {
 }
 
 .client-logo:hover {
-  border: 1px solid var(--accent-cl);
+  border: 1px solid #2196F3;
+}
+
+.client-logo:hover svg.client-logo-svg {
+  fill: #2196F3;
+}
+
+.client-logo:not(:last-child) {
+  margin-right: 30px;
 }
 
 .client-logo-link {
   display: flex;
   box-sizing: border-box;
   height: 90px;
-}
-
-.client-logo:hover svg.client-logo-svg {
-  fill: var(--accent-cl);
 }
 
 .client-logo-svg {
@@ -1078,10 +1092,6 @@ link:hover .icon-header-item2 {
   height: 46px;
 }
 
-.client-logo:not(:last-child) {
-  margin-right: 30px;
-}
-
 .client-logo-link {
   justify-content: center;
   align-items: center;
@@ -1091,7 +1101,7 @@ link:hover .icon-header-item2 {
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
-  color: var(--whait-cl);
+  color: #FFFFFF;
   text-decoration: none;
   font-style: normal;
 }
@@ -1109,7 +1119,7 @@ link:hover .icon-header-item2 {
 
 .join {
   text-transform: uppercase;
-  color: var(--whait-cl);
+  color: #FFFFFF;
   font-family: inherit;
   font-weight: 700;
   font-style: normal;
@@ -1156,7 +1166,7 @@ figure p {
   text-align: center;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: var(--whait-cl);
+  color: #FFFFFF;
   z-index: 2;
   opacity: 1;
   text-align: center;
@@ -1170,13 +1180,17 @@ figure p {
 
 .subscribe {
   text-transform: uppercase;
-  color: var(--whait-cl);
+  color: #FFFFFF;
   font-family: inherit;
   font-weight: 700;
   font-style: normal;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 3%;
+  margin: 0;
+  padding: 0;
+  margin-bottom: 20px;
+  margin-top: 0;
 }
 
 .inline-information li {
@@ -1189,21 +1203,6 @@ figure p {
   margin-left: 93px;
 }
 
-.subscribe {
-  margin: 0;
-  padding: 0;
-  margin-bottom: 20px;
-  margin-top: 0;
-  text-transform: uppercase;
-  color: var(--whait-cl);
-  font-family: inherit;
-  font-weight: 700;
-  font-style: normal;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 3%;
-}
-
 .subscribe-form {
   display: flex;
 }
@@ -1214,7 +1213,7 @@ figure p {
   background: transparent;
   width: 358px;
   height: 50px;
-  color: var(--whait-cl);
+  color: #FFFFFF;
   font-family: inherit;
   font-weight: normal;
   font-style: normal;
@@ -1233,13 +1232,13 @@ figure p {
   margin: 0;
   padding: 0;
   border-radius: 4px;
-  border: 1 solid var(--accent-cl);
-  background: var(--accent-cl);
+  border: 1 solid #2196F3;
+  background: #2196F3;
   width: 200px;
   height: 50px;
   margin-right: 0px;
   margin-left: 12px;
-  color: var(--whait-cl);
+  color: #FFFFFF;
   font-family: inherit;
   font-weight: bold;
   font-style: normal;
@@ -1254,7 +1253,7 @@ figure p {
   padding-bottom: 10px;
   padding-right: 18px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  fill: var(--whait-cl);
+  fill: #FFFFFF;
   cursor: pointer;
 }
 
