--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -1,20 +1,46 @@
-.icon-x{
-    display: flex;
-    margin-top: 4px;
-    margin-left: 4px;
-    padding: 0;
-    height: 100%;
-    width: 100%;
-    fill: $black-cl;
-    &:hover{
-      fill: $accent-cl;
-      cursor: pointer;
-    }
-}
+
 .recole-form{
     display: block;
     height: 478px;
     width: inherit;
+}
+.label-text{
+    display: block;
+    padding: 0;
+    margin: 0;
+    margin-top: 10px;
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.01em;
+    color: #757575;
+}
+.recole-form-feald{
+    margin-top: 4px;
+    margin-bottom: 0;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    background: transparent;
+    width: 448px;
+    height: 40px;
+    color: $black-cl;
+    font-style: normal;
+    font-size:16px;
+    line-height: 1.25;
+    letter-spacing: 3%;
+    resize: none;
+    border-radius: 4px;
+    padding-top: 12px;
+    padding-right: 16px;
+    padding-bottom: 12px;
+    padding-left: 16px;
+    &:focus,
+    &:hover{
+        border: 1px solid #2196F3;
+        border-radius: 4px;
+        box-shadow: none;
+        outline: none;
+        cursor: pointer;
+    }
 }
 .svg-form1{
     position: absolute;
@@ -40,36 +66,8 @@
     fill: $accent-cl;
 }
 
-.recole-form-feald{
-    margin-top: 4px;
-    margin-bottom: 0;
-    border: 1px solid rgba(33, 33, 33, 0.2);;
-    background: transparent;
-    width: 448px;
-    height: 40px;
-    color: $black-cl;
-    font-style: normal;
-    font-size:16px;
-    line-height: 1.25;
-    letter-spacing: 3%;
-    resize: none;
-    border-radius: 4px;
-    padding-top: 12px;
-    padding-right: 16px;
-    padding-bottom: 12px;
-    padding-left: 16px;
-    border: 1px solid rgba(33, 33, 33, 0.2)
-}
-.recole-form-feald:focus,
-.recole-form-feald:hover{
-    border: 1px solid #2196F3;
-    border-radius: 4px;
-    box-shadow: none;
-    outline: none;
-    cursor: pointer;
-}
-textarea.checkbox:hover input,
-textarea.checkbox:focus input{
+textarea.recole-form-feald:hover,
+textarea.recole-form-feald:focus{
     border: 1px solid #2196F3;
     border-radius: 4px;
     box-shadow: none;
@@ -95,20 +93,7 @@ input.recole-form-feald:focus + svg.svg-form2,
 input.recole-form-feald:focus + svg.svg-form3{
     fill: $accent-cl;
 }
-.label-text{
-    display: block;
-    padding: 0;
-    margin: 0;
-    margin-top: 10px;
-    font-weight: normal;
-    font-size: 12px;
-    line-height: 1.17;
-    letter-spacing: 0.01em;
-    color: #757575;
-}
-textarea.recole-form-feald{
-    height: 120px;
-}
+
 .checkbox{
     display: none;
     position: absolute;
@@ -204,17 +189,4 @@ label.fake{
       cursor: pointer;
     }
 }
-.button-clouse{
-    content: "";
-    position: absolute;
-    top: 8px;
-    right: 8px;
-    width: 30px;
-    height: 30px;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    border-radius: 100%;
-    background: inherit;
-}
-.button-clouse:focus{
-    cursor: pointer;
-}
+
