--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -41,3 +41,34 @@
     text-align: center;
     letter-spacing: 0.03em;
 }
+.button-clouse{
+    content: "";
+    position: absolute;
+    top: 8px;
+    right: 8px;
+    width: 30px;
+    height: 30px;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 100%;
+    background: inherit;
+    cursor: pointer;
+}
+.button-clouse:focus{
+    fill: $accent-cl;
+    cursor: pointer;
+}
+.icon-x{
+    cursor: pointer;
+    display: flex;
+    margin-top: 4px;
+    margin-left: 4px;
+    padding: 0;
+    height: 100%;
+    width: 100%;
+    fill: $black-cl;
+    &:focus,
+    &:hover{
+      fill: $accent-cl;
+      cursor: pointer;
+    }
+}
